force-app/main/default/objects/Products__x/fields/CostPerUnitAmount__c.field-meta.xml
<CustomField>
    <fullName>CostPerUnitAmount__c</fullName>
    <description>CostPerUnitAmount</description>
    <externalDeveloperName>CostPerUnitAmount</externalDeveloperName>
    <label>CostPerUnitAmount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>