force-app/main/default/objects/Products__x/fields/ProductType__c.field-meta.xml
<CustomField>
    <fullName>ProductType__c</fullName>
    <description>ProductType</description>
    <externalDeveloperName>ProductType</externalDeveloperName>
    <label>ProductType</label>
    <length>128</length>
    <type>Text</type>
</CustomField>